# smolagents

./: README.md  prototype_server.py  pyproject.toml
.github/workflows/: tests.yml
docs/source/en/: _toctree.yml  guided_tour.md
docs/source/en/examples/: rag.md
docs/source/zh/: guided_tour.md
examples/: agent_from_any_llm.py  benchmark.ipynb  gradio_upload.py  inspect_multiagent_run.py  tool_calling_agent_mcp.py  vlm_browser.py  vlm_web_browser.py  vlm_webbrowser.py
examples/GAIA_submission/: analysis.ipynb  gaia.py  requirements.txt  visual_vs_text_browser.ipynb
examples/GAIA_submission/output_browsers/: code_o1_27-01_text.jsonl  code_o1_27-01_vision.jsonl
examples/GAIA_submission/scripts/: cookies.py  mdconvert.py  reformulator.py  run_agents.py  text_inspector_tool.py  text_web_browser.py  visual_qa.py  vlm_web_browser.py
examples/open_deep_research/: README.md  analysis.ipynb  requirements.txt  run.py  run_gaia.py  visual_vs_text_browser.ipynb
src/smolagents/: __init__.py  _function_type_hints_utils.py  _transformers_utils.py  agents.py  default_tools.py  docker.py  docker_executor.py  e2b_executor.py  gradio_ui.py  local_python_executor.py  logger.py  memory.py  models.py  monitoring.py  prompts.py  testing_utils.py  tool_validation.py  tools.py  types.py  utils.py  vlm_web_browser.py
tests/: test_agents.py  test_all_docs.py  test_default_tools.py  test_docker_executor.py  test_final_answer.py  test_local_python_executor.py  test_memory.py  test_models.py  test_monitoring.py  test_python_interpreter.py  test_tools.py  test_types.py  test_utils.py
(+17 files in other folders)
