[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "smolagents"
version = "1.3.0.dev"
description = "🤗 smolagents: a barebones library for agents. Agents write python code to call tools or orchestrate other agents."
authors = [
  { name="Aymeric Roucher", email="aymeric@hf.co" }, { name="Thomas Wolf"},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "transformers",
  "requests",
  "rich",
  "pandas",
  "jinja2",
  "pillow",
  "markdownify",
  "gradio",
  "duckduckgo-search",
  "python-dotenv",
  "e2b-code-interpreter",
  "openai",
  "datasets",
]

[tool.ruff]
lint.ignore = ["F403"]

[project.optional-dependencies]
dev = [
  "torch==2.2.1",
  "torchaudio",
  "torchvision",
  "sqlalchemy",
  "accelerate",
  "soundfile",
  "litellm>=1.55.10",
]
test = [
  "torch",
  "torchaudio",
  "torchvision",
  "pytest>=8.1.0",
  "sqlalchemy",
  "ruff>=0.5.0",
  "accelerate",
  "soundfile",
  "litellm>=1.55.10",
]

